# mediaman

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  bandit.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: DECISIONS.md  GATES.md  INDEX.md  MEMORY.md  OVERVIEW.md
.claude/docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  GLOSSARY.md  OPERATIONS.md  SECURITY.md  TESTING.md
.claude/docs/modules/: app-entry.md  platform.md  scanner.md  services-arr.md  services-downloads.md  services-infra.md  services-mail.md  services-media-meta.md  web-auth.md  web-data.md  web-frontend.md  web-http.md  web-middleware.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
.playwright-mcp/: page-2026-04-19T19-29-43-282Z.yml  page-2026-04-19T19-30-12-502Z.yml  page-2026-04-19T19-30-22-519Z.yml  page-2026-04-19T19-32-50-329Z.yml  page-2026-04-19T19-33-38-187Z.yml  page-2026-04-19T19-34-30-151Z.yml
docs/remediation/: PLAN.md  PLAN2.md
scripts/: pin-lock.sh
src/mediaman/: __init__.py  app_factory.py  audit.py  config.py  crypto.py  db.py  main.py  models.py  validators.py
src/mediaman/auth/: __init__.py  _token_hashing.py  audit.py  cli.py  login_lockout.py  middleware.py  password_hash.py  password_policy.py  rate_limit.py  reauth.py  session.py  session_store.py
src/mediaman/auth/rate_limit/: __init__.py  ip_resolver.py  limiters.py
src/mediaman/bootstrap/: __init__.py  crypto.py  data_dir.py  db.py  scan_jobs.py  scheduling.py  validators.py
src/mediaman/core/: __init__.py  audit.py  backoff.py  email_validation.py  format.py  scheduled_action_kinds.py  scrub_filter.py  time.py  url_safety.py
src/mediaman/crypto/: __init__.py  _aes_key.py  _aes_migrate.py  aes.py  tokens.py
src/mediaman/db/: __init__.py  connection.py  schema.py  schema_definition.py
src/mediaman/db/migrations/: 0035_aes_v1_sunset.py  0036_admin_users_email.py  __init__.py  _helpers.py  v01.py  v02.py  v03.py  v04.py  v05.py  v06.py  v07.py  v08.py  v09.py  v10.py  v11.py  v12.py  v13.py  v14.py  v15.py  v16.py  v17.py  v18.py  v19.py  v20.py  v21.py  v22.py  v23.py  v24.py  v25.py  v26.py  v27.py  v28.py  (+7 more)
src/mediaman/scanner/: __init__.py  _eligibility.py  _plex_builder.py  _post_scan.py  _scan_library.py  arr_dates.py  deletions.py  engine.py  fetch.py  movies.py  repository.py  runner.py  scheduler.py  tv.py
src/mediaman/services/: __init__.py  anime_detect.py  arr_build.py  arr_client_base.py  arr_completion.py  arr_fetcher.py  arr_search_trigger.py  arr_state.py  download_format.py  download_notifications.py  download_queue.py  format.py  http_client.py  item_enrichment.py  mailgun.py  newsletter.py  nzbget.py  omdb.py  openai_client.py  openai_recommendations.py  plex.py  radarr.py  rate_limits.py  scheduled_actions.py  settings_reader.py  sonarr.py  storage.py  tmdb.py  url_safety.py
src/mediaman/web/: __init__.py  cookies.py  models.py  responses.py
tests/: conftest.py
tests/helpers/: factories.py
tests/integration/: test_download_submit_flow.py  test_keep_flow.py  test_newsletter_flow.py  test_scan_to_queue_flow.py  test_session_lifecycle.py
tests/unit/: test_config.py  test_crypto.py  test_db.py  test_models.py  test_security_hardening.py  test_security_hardening_r2.py
tests/unit/auth/: test_audit.py  test_cli.py  test_login_lockout.py  test_password_hash.py  test_password_policy.py  test_rate_limit.py  test_reauth.py  test_session.py  test_session_store.py
tests/unit/bootstrap/: test_db.py  test_scheduling.py
tests/unit/core/: test_backoff.py  test_email_validation.py  test_format.py  test_scrub_filter.py
tests/unit/crypto/: test_crypto.py
tests/unit/db/: test_db.py  test_migration_0036_admin_users_email.py
tests/unit/scanner/: test_arr_dates.py  test_deletions.py  test_eligibility.py  test_engine.py  test_engine_cleanup.py  test_engine_decision.py  test_engine_fetch.py  test_engine_library.py  test_engine_twophase.py  test_engine_write.py  test_fetch.py  test_movies.py  test_repository.py  test_runner.py  test_scan_items.py  test_scheduler.py  test_tv.py
tests/unit/services/: test_anime_detect.py  test_arr_base_urls.py  test_arr_build.py  test_arr_client_base.py  test_arr_completion.py  test_arr_fetcher.py  test_arr_search_trigger.py  test_arr_state.py  test_auto_abandon.py  test_backoff.py  test_download_format.py  test_download_notifications.py  test_download_queue.py  test_format.py  test_http_client.py  test_item_enrichment.py  test_mailgun.py  test_newsletter_send.py  test_newsletter_template.py  test_nzbget.py  test_omdb.py  test_openai_client.py  test_openai_recommendations.py  test_path_safety.py  test_plex.py  test_radarr.py  test_scrub_filter.py  test_settings_reader.py  test_sonarr.py  test_storage.py  test_tmdb.py  test_url_safety.py
tests/unit/web/: conftest.py  test_a11y_landmarks.py  test_auth_routes.py  test_auth_routes_coverage.py  test_cookies.py  test_dashboard.py  test_download_token_page.py  test_downloads_api.py  test_force_password_change.py  test_health_endpoints.py  test_helpers.py  test_history.py  test_history_security_events.py  test_keep_route.py  test_kept.py  test_library_mutations.py  test_middleware_is_admin.py  test_models_hardening.py  test_page_session_binding.py  test_plex_tester_h4.py  test_poster.py  test_poster_cache_b3.py  test_recommended_api.py  test_recommended_page_arr_resilience.py  test_recommended_refresh_rate_limit.py  test_responsive_smoke.py  test_review_k_web_routes2_fixes.py  test_scan.py  test_search_api.py  test_search_download_audit.py  test_search_download_rate_limit.py  test_security_findings.py  test_security_headers.py  test_settings_api.py  test_settings_reauth.py  test_show_api.py  test_subscribers_admin.py  test_subscribers_newsletter_send.py  test_subscribers_xss.py  test_unsubscribe_token_url.py  (+4 more)
(+450 files in other folders)
