[build-system]
# setuptools >=82.0.1 is sufficient for src layout + package-data discovery.
# PEP 639 SPDX licence fields (license = "MIT" flat string) require >=77;
# leave the classic { text = "MIT" } form until we pin setuptools >=77.
# TODO(P7): bump to setuptools>=77 and adopt PEP 639 + setuptools-scm for
#           version management once CI lockfile is in place.
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaman"
# Keep a literal version for now; bump here and in src/mediaman/__init__.py
# together. TODO(P7): switch to setuptools-scm + dynamic = ["version"].
version = "0.1.0"
description = "Self-hosted media lifecycle management for Plex, with scanner, newsletter, and admin web UI."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vilmar Rosset", email = "glowingshark6393@rosset.ie" },
]
keywords = ["plex", "sonarr", "radarr", "nzbget", "media-management", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi~=0.136",
    "uvicorn[standard]~=0.46",
    "jinja2~=3.1",
    "plexapi~=4.18",
    "requests~=2.33",
    "apscheduler~=3.11",
    "bcrypt~=5.0",
    "cryptography~=48.0",
    "python-multipart~=0.0.27",
    "defusedxml~=0.7",
    "pydantic~=2.13",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
# Pinned (~=) so CI installs a known set rather than whatever PyPI ships
# the day the workflow runs. Bump deliberately; Dependabot will open PRs.
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "pytest-mock~=3.15",
    "pytest-asyncio~=1.3",
    "httpx~=0.28",
    "ruff~=0.15",
    "mypy~=1.20",
    "coverage[toml]~=7.14",
    "types-requests~=2.33",
    # freezegun is the canonical clock for tests that exercise time-dependent
    # behaviour (lockout windows, session idle expiry, "X days ago" formatters).
    # Use the ``freezer`` fixture in tests/unit/web/conftest.py rather than
    # reaching for ``datetime.now()`` directly.
    "freezegun~=1.5",
]

[project.urls]
Homepage = "https://github.com/rossetv/mediaman"
Repository = "https://github.com/rossetv/mediaman"
Issues = "https://github.com/rossetv/mediaman/issues"

[project.scripts]
mediaman = "mediaman.main:cli_main"
mediaman-create-user = "mediaman.web.auth.cli:create_user_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mediaman = ["web/templates/**/*.html", "web/static/**/*", "web/auth/data/*.txt", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (module boundaries)",
]
addopts = "-q --tb=short --strict-markers --strict-config"
filterwarnings = [
    "error",
    # Third-party deprecations we cannot fix upstream:
    "ignore::DeprecationWarning:apscheduler",
    "ignore::DeprecationWarning:plexapi",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Expanded selection — the previous E/F/W/I baseline missed common
# bug-classes (mutable defaults, raise-without-from), modernisations
# (datetime UTC, PEP 604 unions), and pytest anti-patterns. The new
# categories:
#   B   — flake8-bugbear: real bugs (mutable defaults, B017, B904)
#   UP  — pyupgrade: modernise to current Python idioms
#   SIM — flake8-simplify: tighten conditionals and with-blocks
#   C4  — flake8-comprehensions: drop unnecessary list()/dict() calls
#   PT  — flake8-pytest-style: tighten test patterns
#   RUF — ruff's own rules (mutable class defaults, unused noqa, ...)
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]
ignore = [
    "E501",  # line too long — enforced by formatter, not linter
    # The new selection turned up ~300 violations that need batch cleanup.
    # Silence the noisiest noise classes for now and tighten in later
    # passes (tracked in FINDINGS.md follow-ups). We KEEP B904 (raise from),
    # SIM110/118, C4, UP, and the genuinely-bug B0xx rules turned on.
    "B017",     # bare `Exception` in pytest.raises — test style, batched fix
    "RUF001",   # ambiguous unicode in strings — copywriting choice
    "RUF002",   # ambiguous unicode in docstrings — copywriting choice
    "RUF003",   # ambiguous unicode in comments — copywriting choice
    "RUF012",   # mutable class attribute — needs field(default_factory=...)
    "RUF043",   # match= regex contains metacharacter — judgement call per test
    "RUF059",   # unused unpacked variable — usually `_var, _ = (...)` style
]

[tool.ruff.lint.per-file-ignores]
# Tests are deliberately permissive: broad pytest.raises is fine when the
# point of the test is "any failure path"; compound assertions inside one
# test method are fine when each piece is part of the same scenario;
# fixture-injection idioms vary across test styles. These rules surface
# real value in src/ but generate noise in tests/.
"tests/**/*.py" = [
    "PT011",   # pytest.raises(Exception/ValueError) too broad
    "PT018",   # compound assertion — readable per test
    "PT019",   # fixture-without-value-as-mark — historical idiom
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["mediaman"]
branch = true
omit = [
    "*/tests/*",
    "*/web/templates/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Achieved 85% on 2026-05-12 (W2.8 pass); floor set to 83% (achieved − 2 safety margin).
fail_under = 83
